<resources>
    <string name="app_name">Baking</string>

    <string name="name">Name</string>
    <string name="servings">Servings :</string>
    <string name="dialog">Please Wait ...</string>
    <string name="extra">item</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
