<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bakeframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding8dp" />
